--- a/src/Styles/Home/home.module.css
+++ b/src/Styles/Home/home.module.css
@@ -8,4 +8,40 @@
         align-items: center;
         justify-content: space-between;
     }
+    .browserContainer{
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        gap: 30px;
+        width: 100%;
+        margin-top: -20px;
+        /* padding: 4px 15px; */
+    }
+    .label{
+        font-size: 16px;
+        font-family: Popin,sans-serif;
+        font-weight: 700;
+
+    }
+    button{
+        border: none;
+        background: none;
+    }
+    .latestMovieLabel{
+        width: 100%;
+        font-size: 20px;
+        font-family: Popin,sans-serif;
+        font-weight: 700;
+        text-align: start;
+        margin-left: 40px;
+    }
+    .popularMovieLabel{
+        width: 100%;
+            font-size: 20px;
+            font-family: Popin, sans-serif;
+            font-weight: 700;
+            text-align: start;
+            margin-left: 40px;
+            margin-top: -10px;
+    }
 }
