--- a/src/Styles/Navbar/navbar.module.css
+++ b/src/Styles/Navbar/navbar.module.css
@@ -2,13 +2,16 @@
     .container {
         display: flex;
         /* border: 1px solid #cccc; */
-        width: 375px;
+        width: 100%;
         height: 40px;
         align-items: center;
         justify-content: space-around;
         box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
-        position: absolute;
-        top: 560px;
+        /* position: absolute; */
+        /* top: 96vh; */
+        position: sticky;
+        bottom: 0px;
+        z-index: 100;
     }
 
     .btn,
