search functionality done

--- a/src/Styles/Navbar/navbar.module.css
+++ b/src/Styles/Navbar/navbar.module.css
@@ -7,11 +7,12 @@
         align-items: center;
         justify-content: space-around;
         box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
-        /* position: absolute; */
-        /* top: 96vh; */
-        position: sticky;
-        bottom: 0px;
-        z-index: 100;
+          bottom: 0px;
+         left: 0;
+         /* margin-top: 80vh; */
+        position: fixed;
+        /* bottom: 0px;
+        z-index: 100; */
     }
 
     .btn,
