--- a/src/Styles/Home/home.module.css
+++ b/src/Styles/Home/home.module.css
@@ -28,20 +28,21 @@
         background: none;
     }
     .latestMovieLabel{
-        width: 100%;
+        width: 90%;
         font-size: 20px;
         font-family: Popin,sans-serif;
         font-weight: 700;
-        text-align: start;
-        margin-left: 40px;
+        /* text-align: start; */
+        padding: 4px 8px;
+        /* margin-left: 40px; */
+        /* border: 1px solid red; */
     }
     .popularMovieLabel{
-        width: 100%;
+        width: 90%;
             font-size: 20px;
             font-family: Popin, sans-serif;
             font-weight: 700;
-            text-align: start;
-            margin-left: 40px;
             margin-top: -10px;
+            padding: 4px 8px;
     }
 }
