--- a/src/Styles/Movies/allMovies.module.css
+++ b/src/Styles/Movies/allMovies.module.css
@@ -8,10 +8,11 @@
         gap: 10px;
     }
     .labelAllMovies{
-        width: 100%;
+        width: 90%;
         font-size: 20px;
+        text-align: start;
         font-family: Popin,sans-serif;
-        margin-left: 30px;
+        /* margin-left: 30px; */
     }
     .gridContainer{
         display: grid;
