--- a/src/Styles/Navbar/navbar.module.css
+++ b/src/Styles/Navbar/navbar.module.css
@@ -1,18 +1,18 @@
 @media screen and (min-width:375px) and (max-width:675px) {
     .container {
+    position: fixed;
+        bottom: 0;
+        left: 0;
+        width: 100%;
         display: flex;
-        /* border: 1px solid #cccc; */
         width: 100%;
         height: 40px;
+        background-color: #f5f5f5;
         align-items: center;
+        padding: 10px;
         justify-content: space-around;
-        box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
-          bottom: 0px;
-         left: 0;
-         /* margin-top: 80vh; */
-        position: fixed;
-        /* bottom: 0px;
-        z-index: 100; */
+        box-shadow: 0px -1px 5px rgba(0, 0, 0, 0.1);
+        
     }
 
     .btn,
@@ -26,7 +26,7 @@
     .homeLogo,
     .moviesLogo,
     .searchLogo {
-        font-size: 28px;
+        font-size: 25px;
     }
 
     .homeLogo:hover {
